// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CookieBanner /> renders correctly 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL kEQBzE cookie-banner"
    id="cookie-banner"
  >
    <div
      className="sc-bcXGCL ovXMQ cookie-text-wrapper"
    >
      <p
        className="sc-bcXGCL kbMcWV cap-text"
        style={
          {
            "marginLeft": 0,
            "marginTop": 0,
          }
        }
      >
        cookies-text
      </p>
      <button
        className="sc-bcXGCL epyW"
        id="cookies-parameters"
        onClick={[Function]}
        type="button"
      >
        setup-cookies
      </button>
    </div>
    <div
      className="sc-bcXGCL hkntNi cookie-button"
    >
      <button
        className="sc-bcXGCL fFxubO"
        id="cookie-decline-button"
        onClick={[Function]}
        type="button"
      >
        decline-optional-cookies
      </button>
      <button
        className="sc-bcXGCL erIlBM btn-cookie-consent"
        id="cookie-consent"
        onClick={[Function]}
        type="button"
      >
        accept-everything
      </button>
    </div>
  </div>,
]
`;

exports[`<CookieContent /> renders correctly 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div>
    <div>
      <div
        className=" ql-editor wysiwyg-render"
        dangerouslySetInnerHTML={
          {
            "__html": "cookies-page-texte-tmp-part1 {"platformLink":"http://localhost","cookieType":3}",
          }
        }
      />
    </div>
    <div
      className=" ql-editor wysiwyg-render"
      dangerouslySetInnerHTML={
        {
          "__html": "cookies-page-texte-part1-2 {"platformLink":"http://localhost"}",
        }
      }
    />
    <div
      className=" ql-editor wysiwyg-render"
      dangerouslySetInnerHTML={
        {
          "__html": "cookies-page-texte-tmp-part1-3 {"platformLink":"http://localhost","nbCookies":3}",
        }
      }
    />
    <div
      className=" ql-editor wysiwyg-render"
      dangerouslySetInnerHTML={
        {
          "__html": "blablablabla cookies",
        }
      }
    />
    <div
      className=" ql-editor wysiwyg-render"
      dangerouslySetInnerHTML={
        {
          "__html": "cookies-page-texte-part2 {"platformLink":"http://localhost"}",
        }
      }
    />
  </div>,
]
`;

exports[`<CookieManager /> renders correctly 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL keKWCf"
  >
    <div
      className="sc-bcXGCL kEQBzE cookie-banner"
      id="cookie-banner"
    >
      <div
        className="sc-bcXGCL ovXMQ cookie-text-wrapper"
      >
        <p
          className="sc-bcXGCL kbMcWV cap-text"
          style={
            {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          cookies-text
        </p>
        <button
          className="sc-bcXGCL epyW"
          id="cookies-parameters"
          onClick={[Function]}
          type="button"
        >
          setup-cookies
        </button>
      </div>
      <div
        className="sc-bcXGCL hkntNi cookie-button"
      >
        <button
          className="sc-bcXGCL fFxubO"
          id="cookie-decline-button"
          onClick={[Function]}
          type="button"
        >
          decline-optional-cookies
        </button>
        <button
          className="sc-bcXGCL erIlBM btn-cookie-consent"
          id="cookie-consent"
          onClick={[Function]}
          type="button"
        >
          accept-everything
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`<CookieModal /> renders correctly 1`] = `
[
  <div
    className="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />,
  <div
    className="cookie-policy"
  >
    <button
      className="sc-bcXGCL keKWCf"
      id="cookies-modal-button"
      onClick={[Function]}
      type="button"
    >
      cookies
    </button>
  </div>,
]
`;
